--- a/src/app/modules/users/users-list/users-list.component.html
+++ b/src/app/modules/users/users-list/users-list.component.html
@@ -25,8 +25,40 @@
           >Add<i class="fa-solid fa-plus ms-2"></i
         ></a>
       </div>
+      <div class="d-flex align-items-center mt-5 container">
+        <span>Search: </span>
+        <input
+          type="text"
+          [(ngModel)]="searchKey"
+          class="form-control ms-2 me-5"
+          placeholder="Search by username"
+        />
+        <div class="dropdown ms-5 me-2">
+          <button
+            class="btn btn-secondary dropdown-toggle"
+            type="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            Sort
+          </button>
+          <ul class="dropdown-menu">
+            <li>
+              <button (click)="sortById()" class="dropdown-item">By Id</button>
+            </li>
+            <li>
+              <button (click)="sortByName()" class="dropdown-item">
+                By Username
+              </button>
+            </li>
+          </ul>
+        </div>
+        <button (click)="generatePDF()" class="btn btn-primary ms-auto">
+          Export
+        </button>
+      </div>
       <div class="container-fluid">
-        <div class="row ">
+        <div class="row">
           <div class="col p3">
             <table class="table shadow mt-5 rounded">
               <thead>
@@ -41,7 +73,12 @@
               </thead>
               <tbody>
                 <tr
-                  *ngFor="let user of allUsers; let i = index"
+                  *ngFor="
+                    let user of allUsers
+                      | search : searchKey
+                      | paginate : { itemsPerPage: 4, currentPage: p };
+                    let i = index
+                  "
                   [hidden]="!user.empId"
                 >
                   <td>{{ i }}</td>
@@ -51,7 +88,9 @@
                   <td>
                     <span
                       [ngClass]="
-                        user.status == '1' ? 'text-success fw-bolder' : 'text-danger fw-bolder'
+                        user.status == '1'
+                          ? 'text-success fw-bolder'
+                          : 'text-danger fw-bolder'
                       "
                     >
                       {{ user.status == "1" ? "Active" : "Inactive" }}
@@ -59,16 +98,22 @@
                   </td>
 
                   <td>
-                    <a routerLink="/users/edit/{{user.id}}" class="btn"
+                    <a routerLink="/users/edit/{{ user.id }}" class="btn"
                       ><i class="fa-solid fa-pen"></i
                     ></a>
-                    <button class="btn">
+                    <button (click)="deleteUser(user.id)" class="btn">
                       <i class="fa-solid fa-trash"></i>
                     </button>
                   </td>
                 </tr>
+                <tr *ngIf="(allUsers | search : searchKey).length === 0">
+                  <p class="fw-bolder text-danger">User doesnot exist!!!</p>
+                </tr>
               </tbody>
             </table>
+           <div class="text-center ">
+             <pagination-controls (pageChange)="p = $event"></pagination-controls>
+           </div>
           </div>
         </div>
       </div>
