--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,9 @@
 @import 'ngx-toastr/toastr';
-
+@import '../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css';
 *{
     font-family: "Merriweather", serif;
     margin: 0;
     padding: 0;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
